# sge

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  tasks.todo
demo/: CMakeLists.txt  application.cpp  application.h  main.cpp
demo/resources/: config_sponza.json  demo_config.json  show_reel.json
demo/resources/box/: box.blend
demo/resources/configs/: shadows.json  show_reel.json
engine/: CMakeLists.txt
engine/core/include/: cascaded_shadow_map_fbo.h  config.h  cubemap.h  editor.h  event.h  imgui_renderer.h  render_texture.h  resource_manager.h  scene.h  shader.h  shadow_map_fbo.h  texture.h
engine/core/sources/: cascaded_shadow_map_fbo.cpp  config.cpp  cubemap.cpp  cubemap_renderer.cpp  editor.cpp  imgui_renderer.cpp  input_system.cpp  log.cpp  material.cpp  mesh.cpp  render_texture.cpp  renderer.cpp  resource_manager.cpp  scene.cpp  shader.cpp  shadow_map_fbo.cpp  texture.cpp  utilities.cpp
engine/include/: camera.h  config.h  cubemap_renderer.h  editor.h  event.h  imgui_renderer.h  input_system.h  log.h  material.h  mesh.h  model.h  render_texture.h  renderer.h  resource_manager.h  scene.h  shader.h  texture.h  utilities.h  window.h
engine/private/: application.cpp  sge_application.cpp  sge_application_settings.cpp  sge_bloom_combine_pass.cpp  sge_blur_pass.cpp  sge_brightness_extraction_pass.cpp  sge_camera.cpp  sge_camera_controller.cpp  sge_config.cpp  sge_constant_buffer.cpp  sge_data_adapters.cpp  sge_data_factory.cpp  sge_data_structures.cpp  sge_depth_buffer.cpp  sge_descriptor_heap.cpp  sge_device.cpp  sge_directory_monitor.cpp  sge_editor.cpp  sge_editor_utils.cpp  sge_fence.cpp  sge_file_dialog.cpp  sge_forward_render_pass.cpp  sge_frame_timer.cpp  sge_gbuffer.cpp  sge_geometry_render_pass.cpp  sge_index_buffer.cpp  sge_input.cpp  sge_lighting_render_pass.cpp  sge_logger.cpp  sge_material.cpp  sge_material_manager.cpp  sge_math.cpp  sge_mesh.cpp  sge_model.cpp  sge_model_asset.cpp  sge_model_instance.cpp  sge_model_loader.cpp  sge_pipeline_state.cpp  sge_render_context.cpp  sge_render_target.cpp  (+16 more)
engine/private/core/: sge_application.cpp  sge_constant_buffer.cpp  sge_descriptor_heap.cpp  sge_device.cpp  sge_directory_monitor.cpp  sge_editor_utils.cpp  sge_fence.cpp  sge_file_dialog.cpp  sge_frame_timer.cpp  sge_index_buffer.cpp  sge_input.cpp  sge_logger.cpp  sge_math.cpp  sge_resource.cpp  sge_scoped_event.cpp  sge_shader_include_handler.cpp  sge_vertex_buffer.cpp  sge_viewport_scissors.cpp  sge_window.cpp
engine/private/data/: sge_animated_model_instance.cpp  sge_camera.cpp  sge_camera_controller.cpp  sge_cubemap_texture.cpp  sge_data_adapters.cpp  sge_data_factory.cpp  sge_data_structures.cpp  sge_material.cpp  sge_material_manager.cpp  sge_model_asset.cpp  sge_model_instance.cpp  sge_model_loader.cpp  sge_scene.cpp  sge_shader.cpp  sge_shader_manager.cpp  sge_texture.cpp  sge_texture_manager.cpp
engine/private/rendering/: sge_depth_buffer.cpp  sge_editor.cpp  sge_gbuffer.cpp  sge_pipeline_state.cpp  sge_render_context.cpp  sge_render_target.cpp  sge_render_target_texture.cpp  sge_renderer.cpp  sge_root_signature.cpp
engine/public/: pch.h  sge_action.h  sge_application.h  sge_application_settings.h  sge_bloom_combine_pass.h  sge_blur_pass.h  sge_brightness_extraction_pass.h  sge_camera.h  sge_camera_controller.h  sge_common_structures.h  sge_config.h  sge_constant_buffer.h  sge_constants.h  sge_data_adapters.h  sge_data_factory.h  sge_data_structures.h  sge_depth_buffer.h  sge_descriptor_heap.h  sge_device.h  sge_directory_monitor.h  sge_editor.h  sge_editor_utils.h  sge_fence.h  sge_file_dialog.h  sge_forward_render_pass.h  sge_frame_timer.h  sge_gbuffer.h  sge_geometry_render_pass.h  sge_helpers.h  sge_index_buffer.h  sge_input.h  sge_light.h  sge_logger.h  sge_material.h  sge_material_data.h  sge_material_manager.h  sge_math.h  sge_mesh.h  sge_model.h  sge_model_asset.h  (+25 more)
engine/public/core/: sge_action.h  sge_application.h  sge_config.h  sge_constant_buffer.h  sge_constants.h  sge_device.h  sge_fence.h  sge_file_dialog.h  sge_frame_timer.h  sge_helpers.h  sge_index_buffer.h  sge_input.h  sge_logger.h  sge_math.h  sge_scoped_event.h  sge_singleton.h  sge_window.h
engine/public/data/: sge_animated_model_instance.h  sge_animation.h  sge_camera.h  sge_camera_controller.h  sge_cubemap_texture.h  sge_data_factory.h  sge_data_structures.h  sge_material.h  sge_material_manager.h  sge_mesh.h  sge_model_asset.h  sge_model_instance.h  sge_model_loader.h  sge_scene.h  sge_shader.h  sge_shader_manager.h  sge_texture.h  sge_texture_manager.h
engine/public/rendering/: sge_depth_buffer.h  sge_editor.h  sge_gbuffer.h  sge_pipeline_state.h  sge_render_context.h  sge_render_target.h  sge_render_target_texture.h  sge_renderer.h  sge_root_signature.h
engine/shaders/: basic_lighting.frag  basic_lighting.vert  brdf.hlsl  default.frag  default.vert  depth.frag  depth.vert  lamp.vert  lighting.frag  lighting.vert  pixel_input.hlsl  ps_bloom_combine_pass.hlsl  ps_blur_pass.hlsl  ps_brightness_extraction_pass.hlsl  ps_default.hlsl  ps_deferred.hlsl  ps_final_pass.hlsl  ps_forward_pass.hlsl  ps_fxaa_pass.hlsl  ps_geometry_pass.hlsl  ps_lighting.hlsl  ps_lighting_pass.hlsl  ps_shadow_map_pass.hlsl  ps_skybox.hlsl  ps_ssao_pass.hlsl  ps_tonemapping_pass.hlsl  scene_data.hlsl  shadows.hlsl  skybox.frag  skybox.vert  transform_buffer.hlsl  vertex_common.hlsl  vs_default.hlsl  vs_forward_pass.hlsl  vs_fullscreen_quad.hlsl  vs_lighting.hlsl  vs_lighting_pass.hlsl  vs_shadow_map_pass.hlsl  vs_skybox.hlsl
engine/shaders/show_reel/: bumped.vert  bumped_diffuse.frag  color.vert  diffuse.vert  final.frag  point_lights.frag  vsm.frag
engine/sources/: CMakeLists.txt  camera.cpp  config.cpp  cubemap.cpp  cubemap_renderer.cpp  editor.cpp  imgui_renderer.cpp  input_system.cpp  log.cpp  material.cpp  mesh.cpp  model.cpp  render_texture.cpp  renderer.cpp  resource_manager.cpp  scene.cpp  shader.cpp  texture.cpp  window.cpp
samples/: CMakeLists.txt  demo.cpp
samples/resources/anim/: albedo.dds  (+3 more)
tests/: CMakeLists.txt  sge_math_tests.cpp
(+52 files in other folders)
